--- a/HardAI/HardAI.vcxproj
+++ b/HardAI/HardAI.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Artist.h" />
     <ClInclude Include="MathFunctions.h" />
     <ClInclude Include="Neuron.h" />
     <ClInclude Include="NeuronSaver.h" />
